[package]
name = "crosschat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.28"
irc = "0.15.0"
color-eyre = "0.6"
tokio = { version = "1.32.0", features = ["rt", "rt-multi-thread", "macros", "net", "time"] }
reqwest = { version = "0.11.18", features = ["json"] }
serde = "1.0.183"
chrono = "0.4.26"
dialoguer = {version="0.10.4", features = ["fuzzy-select"]}
console = "0.15.7"
